finish cv function

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,7 @@ cloudinary.api-secret=Eqw5VSxMsVndbWnmb3cfLMhKEhA
 cloudinary.folder.default=TopCV/Default
 cloudinary.folder.avatar=TopCV/Image/Avatar
 cloudinary.folder.job=TopCV/Image/Job
+cloudinary.folder.cv=TopCV/Cv
 #======================================================================================================
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
