start api home page for employer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,6 +44,18 @@ openapi.contact-url=http://localhost:8080/contact
 openapi.title=TopCV API Documentation
 openapi.version=1.0
 openapi.description=This document exposes endpoint APIs to manage TopCV system
+#========================================================================================================================
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=thithptquocgia2003@gmail.com
+spring.mail.password=tyqz haof nkfv dora
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+mail.smtp.debug=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
 #Health Check=====================================================================================
 management.endpoints.web.exposure.include=*
 management.endpoint.health.enabled=true
