--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=TopCV
 #==========================================================================================================
-spring.datasource.url=jdbc:mysql://localhost:3306/topcv?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=@thOng2003#
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USER}
+spring.datasource.password=${DATASOURCE_PASSWORD}
+#============================================================================================================
+fontend.candidate.url=${FONTEND_URL}
+employer.candidate.url=${}
 #======================================================================================================================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
