--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=TopCV
 #==========================================================================================================
-spring.datasource.url=${DATASOURCE_URL}
-spring.datasource.username=${DATASOURCE_USER}
-spring.datasource.password=${DATASOURCE_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3306/topcv?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=@thOng2003#
 #============================================================================================================
-fontend.candidate.urls=${FONTEND_CANDIDATE_URL}
-fontend.employer.urls=${FONTEND_EMPLOYER_URL}
+fontend.candidate.urls=http://localhost:3000
+fontend.employer.urls=http://localhost:3001
 #======================================================================================================================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
