--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=TopCV
 #==========================================================================================================
-spring.datasource.url=jdbc:mysql://localhost:3306/topcv?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=@thOng2003#
+spring.datasource.url=${DATA_URL}
+spring.datasource.username=${DATA_USERNAME}
+spring.datasource.password=${DATA_PASSWORD}
 #============================================================================================================
-fontend.candidate.urls=http://localhost:3000
-fontend.employer.urls=http://localhost:3001
+fontend.candidate.urls=${FONTEND_CANDIDATE_URL}
+fontend.employer.urls=${FONTEND_EMPLOYER_URL}
 #======================================================================================================================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
