--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.application.name=TopCV
 #==========================================================================================================
-spring.datasource.url=${DATA_URL}
-spring.datasource.username=${DATA_USERNAME}
-spring.datasource.password=${DATA_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3306/topcv
+spring.datasource.username=root
+spring.datasource.password=@thOng2003#
 #============================================================================================================
-fontend.candidate.urls=${FONTEND_CANDIDATE_URL}
-fontend.employer.urls=${FONTEND_EMPLOYER_URL}
+#fontend.candidate.urls=${FONTEND_CANDIDATE_URL}
+#fontend.employer.urls=${FONTEND_EMPLOYER_URL}
+fontend.candidate.urls=3000
+fontend.employer.urls=3001
 #======================================================================================================================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
