--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,9 @@ spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 #======================================================================================================================
 server.port=8080
+#=======================================================================================================================
+redis.host=localhost
+redis.port=6379
 #=======================================================================================================
 spring.messages.basename=i18n/messages
 spring.messages.default-encoding=UTF-8
