--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.datasource.password=@thOng2003#
 #============================================================================================================
 #fontend.candidate.urls=${FONTEND_CANDIDATE_URL}
 #fontend.employer.urls=${FONTEND_EMPLOYER_URL}
-fontend.candidate.urls=3000
-fontend.employer.urls=3001
+fontend.candidate.urls=http://localhost:3000
+fontend.employer.urls=http://localhost:3001
 #======================================================================================================================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
