--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ fontend.employer.urls=http://localhost:3001
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.envers.store_data_at_delete=true
 #======================================================================================================================
 server.port=8080
 #=======================================================================================================================
